add sign up swagger spec
